2008-07-xx:
    * version 0.6.1
    * Clean quotes of tags that aren't parsed by GameFAQs

2008-07-29:
    * version 0.6.0
    * Update QuickWhois for new profiles
    * QuickPost now checks for errors after posting the message
    * Prevent long profile fields from stretching QuickWhois
    * QuickPost now catches short topic titles before sending the post
      to the server
    * Add GameFOX Standard Default stylesheet with the old QuickPost look
    * Add "Grab From GameFAQs" button to retrieve signature from GameFAQs
    * Remove site settings functionality
    * Add grab button to retrieve board settings from GameFAQs
    * Rewrite quoting backend, allow for user-defined quote templates. Quotes
      are now added in order at the bottom of the post, even with your
      signature in the textarea
    * New, more flexible theme options pane and CSS backend
    * Some efforts towards making GameFOX better for new users:
        - Enable the standard GameFOX stylesheet by default. This immediately
          cleans up GameFAQs a bit and styles QuickPost without the user
          having to figure out what to do
        - Display the options window automatically after installation
        - Import the user's board settings and signature on first run
    * Fixes for quoting when the message data is displayed left of the post
    * Include GFCode stylesheet, make full GFCode quotes default